Fixed ranged properties not showing errors

--- a/src/rex.formbuilder/static/js/style/index.less
+++ b/src/rex.formbuilder/static/js/style/index.less
@@ -183,6 +183,10 @@ body {
 
             &.rf-Fieldset--invalid {
                 color: red;
+
+                .rf-Message {
+                    margin-left: 145px;
+                }
             }
 
             &.rf-Fieldset--required span {
